# AG3

./: .clangd  .gitignore  AG3.sln  AG3.vcxproj  AG3.vcxproj.filters  betterplan.cpp  build.bat  build_extensions.bat  build_plugins.bat  clang_build.bat  compile_flags.txt  debug.bat  meson.build  meson_build.bat  mingw_build.bat  plan.txt  run.bat  vcpkg.json
.cache/clangd/index/: _fixes.hpp.4287E2D5F46668CE.idx  _fixes.hpp.62551F84E3D79C81.idx  _matrix_vectorize.hpp.0EEF7CA6061CD995.idx  _noise.hpp.5138E890B0EC72E3.idx  (+2265 more)
AG3/: .gitignore  AG3.sln  AG3.vcxproj  AG3.vcxproj.filters
TG3/: TG3.cpp  TG3.vcxproj  TG3.vcxproj.filters
code/: .gitignore  AG3-VS2.sln  AG3-VS2.vcxproj  AG3-VS2.vcxproj.filters
code/external_binaries/: FastNoise86.lib  FastNoiseD.lib  assimp-vc143-mtd_debug.lib
code/src/: main.cpp
external_headers/SOL2/: README.md  list_headers.py
external_headers/assimp/: config.h
external_headers/kelcoro/: latch.hpp  memory_support.hpp
external_headers/lua/: onelua.cpp
external_headers/mesh_simplification/: simplify.cpp
external_headers/wav_loader/: wav_loader.h
models/: rainbowcube.blend  rainbowcube.blend1  rainbowcube.mtl  skybox.mtl
modules/: .gitignore  test_module.cpp
pch/: external_pch.hpp
scripts/: scheduler.lua  test.lua
shaders/: debug_axis_vertex.glsl  debug_simple_fragment.glsl  debug_simple_vertex.glsl  gui_billboard_vertex.glsl  gui_fragment.glsl  gui_vertex.glsl  parallax_mapping.glsl  phong_lighting.glsl  postproc_fragment.glsl  postproc_vertex.glsl  shadowmapper_vertex.glsl  skybox_fragment.glsl  skybox_fragment_static.glsl  skybox_vertex.glsl  world_culling.glsl  world_fragment.glsl  world_triplanar_fragment.glsl  world_triplanar_vertex.glsl  world_vertex.generic  world_vertex.glsl  world_vertex_animation.glsl
src/: main.cpp  meson.build
src/audio/: checked_openal_call.cpp  engine.cpp  engine.hpp  sound.cpp  sound.hpp
src/conglomerates/: gui.cpp  gui.hpp
src/debug/: debug.cpp  debug.hpp  log.hpp
src/gameobjects/: audio_player_component.cpp  audio_player_component.hpp  base_component.cpp  base_component.hpp  collider_component.cpp  collider_component.hpp  component_pool.cpp  component_pool.hpp  component_registry.cpp  component_registry.hpp  gameobject.cpp  gameobject.hpp  gui_component.hpp  lifetime.cpp  pointlight_component.cpp  pointlight_component.hpp  render_component.cpp  render_component.hpp  rigidbody_component.cpp  rigidbody_component.hpp  transform_component.cpp  transform_component.hpp
src/graphics/: buffered_buffer.cpp  buffered_buffer.hpp  camera.cpp  camera.hpp  engine.cpp  engine.hpp  framebuffer.cpp  framebuffer.hpp  gl_error_handler.cpp  indirect_draw_command.cpp  let_me_hash_a_tuple.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  mesh_multifromfile.cpp  meshpool.cpp  meshpool.hpp  renderable_mesh.cpp  renderable_mesh.hpp  shader_program.cpp  shader_program.hpp  stb_image.cpp  texture.cpp  texture.hpp  tinyobjloader.cpp  window.cpp  window.hpp
src/lua/: lua.hpp  lua_component_wrappers.cpp  lua_component_wrappers.hpp  lua_constructor_wrappers.cpp  lua_constructor_wrappers.hpp  lua_handler.cpp  lua_handler.hpp
src/modules/: component_registry_export.hpp  coroutine.hpp  dll_memory_allocator.hpp  engine_export.cpp  engine_export.hpp  graphics_engine_export.cpp  module.cpp  module.hpp  module_globals_pointers.hpp
src/network/: client.hpp
src/pch/: external_pch.h
src/physics/: collision_detection.cpp  collision_detection.hpp  engine.cpp  engine.hpp  gjk.cpp  gjk.hpp  mesh_simplification.cpp  physics_mesh.cpp  physics_mesh.hpp  raycast.cpp  raycast.hpp  spatial_acceleration_structure.cpp  spatial_acceleration_structure.hpp
src/saving/: loader.hpp  save_format_v1.txt
src/utility/: let_me_hash_a_tuple.cpp  triangle_intersection.hpp  utility.cpp  utility.hpp
subprojects/: openal-soft.wrap
subprojects/assimp/: ALL_BUILD.vcxproj  Assimp.sln  BUILDBINARIES_EXAMPLE.bat  INSTALL.vcxproj  INSTALL.vcxproj.filters  UpdateAssimpLibsDebugSymbolsAndDLLs.vcxproj  UpdateAssimpLibsDebugSymbolsAndDLLs.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  assimp.pc  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
subprojects/glfw-3.3.9/: .meson-subproject-wrap-hash.txt
subprojects/lua-5.4.6/: .meson-subproject-wrap-hash.txt
subprojects/minizip-ng-4.0.4/: .meson-subproject-wrap-hash.txt
subprojects/openal-soft-1.23.1/: .meson-subproject-wrap-hash.txt
subprojects/zlib-1.3/: .meson-subproject-wrap-hash.txt
textures/: crate_specular.xcf
~/: .clangd
(+806 files in other folders)
