#glew_dep = declare_dependency(link_args: ['-lglew64'])
#glfw_dep = declare_dependency(link_args: ['-l64glfw3'])
#gl_dep = declare_dependency(link_args: ['-lopengl32'])
#lua_dep = declare_dependency(link_args: ['-L -Llua54dll -ldl'])

#srclib = static_library('srclib', sources, include_directories: incdir, dependencies: [lua_dep, glew_dep, glfw_dep, freetype_dep], cpp_args: ['-O3', '-Wshadow', '-Wall', '-DSOL_ALL_SAFETIES_ON=1'])